[project]
name = "crawl4aitest"
version = "0.0.1"
description = "Local crawler testing"
requires-python = ">=3.14"
dependencies = [
  "crawl4ai",
  "setuptools",
  "wheel",
]

[dependency-groups]
dev = [
  "pytest>=9.0.3",
  "pytest-mock>=3.15.1",
  "pre-commit>=4.5.1",
  "ruff>=0.15.10",
]

[tool.ruff]
line-length = 140
indent-width = 4

[tool.ruff.lint]
select = ["E", "W", "F", "FAST", "RUF", "I", "SIM", "B", "ARG", "RET", "TRY"]

fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]